# Minecraft-Clone

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
Dependencies/glad/: glad.h
docs/: structure.md
shaders/: default.fs  default.vs
src/: BlockType.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  EBO.cpp  EBO.hpp  Mesh.cpp  Mesh.hpp  Minecraft.cpp  Minecraft.h  Shader.cpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  glad.c  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
